# excellent_extractor

./: pyproject.toml
docs/: api.md
src/: api.py  excel_extractor.py
